--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "react-summernote",
-  "version": "1.0.0-rc2",
+  "version": "1.0.0-rc3",
   "description": "Summernote adaptation for react",
-  "main": "./dist/summernote.js",
+  "main": "./dist/react-summernote.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Vnkitaev/react-summernote.git"
   },
   "scripts": {
-    "compile": "webpack --config ./webpack.config.js",
-    "compile:production": "NODE_ENV=production webpack --config ./webpack.config.js"
+    "compile": "webpack --config ./webpack.config.js"
   },
   "keywords": [
     "summernote",
@@ -25,11 +24,11 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
-    "codemirror": "5.16.0",
-    "summernote-webpack-fix": "0.8.2"
+    "summernote-webpack-fix": "^0.8.1",
+    "codemirror": "^5.11.0"
   },
   "peerDependencies": {
-    "jquery": "3.0.0",
+    "jquery": "^2.2.0",
     "bootstrap": "^3.3.6",
     "react": "*",
     "react-dom": "*"
@@ -45,6 +44,7 @@
     "style-loader": "0.13.1",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
+    "copy-webpack-plugin": "3.0.1",
     "eslint": "2.13.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-react": "5.2.2",
