--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-summernote",
-  "version": "1.0.0-rc3",
+  "version": "1.0.0",
   "description": "Summernote adaptation for react",
   "main": "./dist/react-summernote.js",
   "repository": {
@@ -28,7 +28,7 @@
     "codemirror": "^5.11.0"
   },
   "peerDependencies": {
-    "jquery": "^2.2.0",
+    "jquery": "^2.2.0 || ^3.0.0",
     "bootstrap": "^3.3.6",
     "react": "*",
     "react-dom": "*"
@@ -48,7 +48,7 @@
     "eslint": "2.13.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-react": "5.2.2",
-    "eslint-plugin-import": "1.9.2",
+    "eslint-plugin-import": "1.10.0",
     "eslint-plugin-jsx-a11y": "1.5.3"
   }
 }
