--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-summernote",
-  "version": "1.0.2",
-  "description": "Summernote adaptation for react",
+  "version": "1.0.3",
+  "description": "Summernote (Super simple WYSIWYG editor) adaptation for react",
   "main": "./dist/react-summernote.js",
   "repository": {
     "type": "git",
@@ -16,6 +16,11 @@
     "react-wysiwyg",
     "rich-text-editor",
     "WYSIWYG"
+  ],
+  "files": [
+    "dist",
+    "src",
+    "lang"
   ],
   "author": {
     "name": "Ivan Kitaev",
@@ -45,10 +50,10 @@
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "copy-webpack-plugin": "3.0.1",
-    "eslint": "2.13.1",
+    "eslint": "3.0.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-react": "5.2.2",
-    "eslint-plugin-import": "1.10.0",
-    "eslint-plugin-jsx-a11y": "1.5.3"
+    "eslint-plugin-import": "1.10.2",
+    "eslint-plugin-jsx-a11y": "1.5.5"
   }
 }
