--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-summernote",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Summernote (Super simple WYSIWYG editor) adaptation for react",
   "main": "./dist/react-summernote.js",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "https://github.com/Vnkitaev/react-summernote.git"
   },
   "scripts": {
-    "compile": "webpack --config ./webpack.config.js"
+    "build": "webpack --config ./webpack.config.js"
   },
   "keywords": [
     "summernote",
@@ -39,20 +39,20 @@
     "react-dom": "*"
   },
   "devDependencies": {
-    "webpack": "1.13.3",
-    "babel-core": "6.18.2",
-    "babel-loader": "6.2.7",
+    "webpack": "1.14.0",
+    "babel-core": "6.20.0",
+    "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "url-loader": "0.5.7",
     "file-loader": "0.9.0",
     "style-loader": "0.13.1",
-    "css-loader": "0.25.0",
+    "css-loader": "0.26.1",
     "extract-text-webpack-plugin": "1.0.1",
-    "copy-webpack-plugin": "4.0.0",
-    "eslint": "3.10.0",
+    "copy-webpack-plugin": "4.0.1",
+    "eslint": "3.12.2",
     "eslint-config-airbnb": "13.0.0",
-    "eslint-plugin-react": "6.6.0",
+    "eslint-plugin-react": "6.8.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3"
   }
