--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,6 @@
     "browser": true
   },
   "rules": {
-    "react/forbid-prop-types": [2, { "forbid": ["any"] }],
     "id-length": [1, { "min": 1 }],
     "comma-dangle": 0,
     "arrow-parens": ["error", "as-needed"],
@@ -13,6 +12,9 @@
     "max-len": [2, 200, 2, {
       "ignoreUrls": true,
       "ignoreComments": false
-    }]
+    }],
+
+    "react/require-default-props": 0,
+    "react/forbid-prop-types": [2, { "forbid": ["any"] }]
   }
 }
