--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-summernote",
-  "version": "1.0.5",
+  "version": "2.0.0-rc.9",
   "description": "Summernote (Super simple WYSIWYG editor) adaptation for react",
   "main": "./dist/react-summernote.js",
   "repository": {
@@ -30,7 +30,8 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "summernote": "^0.8.2",
-    "codemirror": "^5.11.0"
+    "codemirror": "^5.23.0",
+    "node-libs-browser": "2.0.0"
   },
   "peerDependencies": {
     "jquery": "^2.2.0 || ^3.0.0",
@@ -39,21 +40,21 @@
     "react-dom": "*"
   },
   "devDependencies": {
-    "webpack": "1.14.0",
-    "babel-core": "6.20.0",
-    "babel-loader": "6.2.10",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.16.0",
-    "url-loader": "0.5.7",
-    "file-loader": "0.9.0",
-    "style-loader": "0.13.1",
-    "css-loader": "0.26.1",
-    "extract-text-webpack-plugin": "1.0.1",
+    "webpack": "2.2.1",
+    "babel-core": "6.23.1",
+    "babel-loader": "6.3.2",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.23.0",
+    "url-loader": "0.5.8",
+    "file-loader": "0.10.1",
+    "style-loader": "0.13.2",
+    "css-loader": "0.26.2",
+    "extract-text-webpack-plugin": "2.1.0",
     "copy-webpack-plugin": "4.0.1",
-    "eslint": "3.12.2",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-plugin-react": "6.8.0",
+    "eslint": "3.17.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-plugin-react": "6.10.0",
     "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3"
+    "eslint-plugin-jsx-a11y": "4.0.0"
   }
 }
