--- a/package.json
+++ b/package.json
@@ -29,33 +29,33 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
-    "summernote": "^0.8.2",
-    "codemirror": "^5.23.0"
+    "codemirror": "^5.23.0",
+    "prop-types": "^15.5.10",
+    "summernote": "^0.8.2"
   },
   "peerDependencies": {
-    "jquery": "^2.2.0 || ^3.0.0",
     "bootstrap": "^3.3.6",
+    "jquery": "^2.2.0 || ^3.0.0",
     "react": "^15.5.0",
-    "react-dom": "*",
-    "prop-types": "*"
+    "react-dom": "*"
   },
   "devDependencies": {
-    "webpack": "2.2.1",
-    "node-libs-browser": "2.0.0",
-    "babel-core": "6.23.1",
-    "babel-loader": "6.3.2",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.23.0",
-    "url-loader": "0.5.8",
-    "file-loader": "0.10.1",
-    "style-loader": "0.13.2",
-    "css-loader": "0.26.2",
-    "extract-text-webpack-plugin": "2.1.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "4.0.1",
-    "eslint": "3.17.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-plugin-react": "6.10.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0"
+    "css-loader": "^0.28.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "^0.11.1",
+    "node-libs-browser": "2.0.0",
+    "style-loader": "^0.18.1",
+    "url-loader": "0.5.8",
+    "webpack": "^2.6.1"
   }
 }
