--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-summernote",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Summernote (Super simple WYSIWYG editor) adaptation for react",
   "main": "./dist/react-summernote.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Vnkitaev/react-summernote.git"
+    "url": "https://github.com/Dakkers/react-summernote.git"
   },
   "scripts": {
     "build": "webpack",
@@ -32,7 +32,7 @@
   "dependencies": {
     "codemirror": "^5.26.0",
     "prop-types": "^15.5.10",
-    "summernote": "^0.8.3"
+    "summernote": "0.8.12"
   },
   "peerDependencies": {
     "bootstrap": "^3.3.6",
